--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,7 +8,7 @@
     padding: 100px 0 300px;
     background: linear-gradient(-45deg, #56125b, #0f0f10, #271e6e);
     background-size: 400% 400%;
-    animation: gradient;
+    animation: gradient 10s ease infinite alternate;
 }
 
 .header::after {
