--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -178,3 +178,32 @@ section {
 ::-webkit-scrollbar-thumb:hover {
     background: var(--secondary-color);
 }
+
+@media screen and (max-width: 480px) {
+    section {
+        scroll-margin-top: 120px;
+    }
+
+    .menu {
+        padding: 32px 24px;
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .menu-logo {
+        max-width: 100px;
+    }
+
+    .menu-item-button {
+        margin: 0;
+    }
+
+    .header {
+        margin-top: 128px !important;
+    }
+
+    .footer-link {
+        display: block;
+        margin-bottom: 16px;
+    }
+}
